--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         
                 <div class="container-fluid">
-                    <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
+                    <a href="{{ path('app_backoffice_main') }}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
                         <img src="{{ asset('images/breakfast-logo-light.png') }}" height="24" alt="Logo BreakFast">
                         <span class="header-logo__title">Break'FAST</span>
                     </a>
