--- a/templates/backoffice/tag/read.html.twig
+++ b/templates/backoffice/tag/read.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="text-uppercase">Liste des Tags</h1>
 
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_new') }}">Créer un Tag</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_create') }}">Créer un Tag</a>
 
     <table class="table table-dark table-striped">
         <thead>
@@ -22,7 +22,7 @@
                 <td class="align-middle text-center">{{ tag.name }}</td>
                 <td class="align-middle text-center">
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_show', {'id': tag.id}) }}">Détails</a>
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_edit', {'id': tag.id}) }}">Mettre à jour</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_update', {'id': tag.id}) }}">Mettre à jour</a>
                 </td>
                 <td class="align-middle text-center">
                     {{ include('backoffice/tag/_delete_form.html.twig') }}
