--- a/templates/backoffice/user/read.html.twig
+++ b/templates/backoffice/user/read.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="text-uppercase">Liste des Utilisateurs</h1>
 
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_new') }}">Créer un Utilisateur</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_create') }}">Créer un Utilisateur</a>
 
     <table class="table table-dark table-striped">
         <thead>
@@ -31,7 +31,7 @@
                 <td class="align-middle text-center">{{ user.roles ? user.roles|json_encode : '' }}</td>
                 <td class="align-middle text-center">
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_show', {'id': user.id}) }}">Détails</a>
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_edit', {'id': user.id}) }}">Mettre à jour</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_update', {'id': user.id}) }}">Mettre à jour</a>
                 </td>
                 <td class="align-middle text-center">
                     {{ include('backoffice/user/_delete_form.html.twig') }}
